Fix tooltips not visible

--- a/src/styles/_project.sass
+++ b/src/styles/_project.sass
@@ -40,7 +40,7 @@ $project-sidebar-background: $color-background-nav
 
 #project_sidebar
 	width: $project-sidebar-width
-	z-index: $z-index-base + 4
+	z-index: $z-index-base + 6
 
 	+media-xs
 		width: 100%
